--- a/makeTable.html
+++ b/makeTable.html
@@ -8,10 +8,13 @@
 </head>
 <body>
 
-<table id="targetTable" class="table table-striped table-hover">
+<div class="container">
+    <div class="row">
+        <table id="targetTable" class="table table-striped table-hover">
 
-</table>
-
+        </table>
+    </div>
+</div>
 <script src="./js/bootstrap.js"></script>
 <script type="module" src="makeTable.js"></script>
 
