dataTable 페이징 시작 번호와 마지막 번호 미세 조정 및 UI 수정

--- a/makeTable.html
+++ b/makeTable.html
@@ -5,14 +5,25 @@
     <title>Title</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./dataTable.css">
 </head>
 <body>
 
 <div class="container">
-    <div class="row">
-        <table id="targetTable" class="table table-striped table-hover">
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <table id="targetTable" class="table table-striped table-hover">
 
-        </table>
+                </table>
+            </div>
+
+            <div class="row">
+                <div class="navStyle">
+
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script src="./js/bootstrap.js"></script>
